crates/batchalign/batchalign-cli/src/cli/snapshots/batchalign__cli__doctor_cmd__tests__explain_gpu_thread_pool_size_default_apple_silicon.snap
---
source: crates/batchalign-cli/src/doctor_cmd.rs
assertion_line: 1060
expression: explanation
---
{
  "knob": "gpu_thread_pool_size",
  "resolved_value": "1",
  "source": "recommendation",
  "recommendation": "1",
  "rule": "1 when GPU is non-functional for batchalign (Apple Silicon MPS, no GPU, CUDA with device_count=0); 4 otherwise",
  "facts_used": "gpu = AppleMps { functional_for_batchalign: false, reason_excluded: Some(AppleSiliconKernelDeadlock) }"
}
